<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/scene_container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg_port"

    >


    <TableLayout
        android:id="@+id/buttons_table"
        android:layout_marginTop="150dp"
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:layout_marginEnd="40dp"
        android:layout_marginStart="40dp"
        android:background="@color/white"
        android:paddingTop="40dp"
        android:paddingBottom="10dp"
        android:paddingEnd="10dp"
        android:paddingStart="10dp"
        android:stretchColumns="*"
        android:layout_centerHorizontal="true"
        >
        <TableRow >
            <ImageButton
                android:id="@+id/play_sound"
                android:layout_width="60dp"
                android:layout_height="60dp"
                android:onClick="playRecord"
                android:src="@drawable/play_button"
                android:background="@color/transparent"
                android:scaleType="fitCenter"

                />
            <ImageButton
                android:id="@+id/delete_sound"
                android:layout_width="60dp"
                android:layout_height="60dp"
                android:onClick="deleteRecord"
                android:background="@color/transparent"
                android:src="@drawable/delete_button"
                android:scaleType="fitCenter"
                />

            <ImageButton
                android:id="@+id/upload_button"
                android:layout_width="60dp"
                android:layout_height="60dp"
                android:onClick="deleteRecord"
                android:background="@color/transparent"
                android:src="@drawable/upload_button"
                android:scaleType="fitCenter"
                />
        </TableRow>
        <TableRow
            android:layout_marginTop="10dp">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/green"
                android:textAlignment="center"
                android:text="@string/play"/>

            <TextView
                android:textAlignment="center"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/delete"
                android:textColor="@color/green"
                android:layout_marginEnd="30dp"
                android:layout_marginStart="40dp"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/green"
                android:textAlignment="center"
                android:text="@string/upload"/>
        </TableRow>

    </TableLayout>

    <rocks.evesan.creatnapp.ui.RecordButton
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:id="@+id/record"
        android:scaleType="fitCenter"
        android:background="@color/transparent"
        android:src ="@drawable/record_button"
        android:layout_alignParentEnd="true"
        android:layout_marginEnd="50dp"
        android:layout_marginTop="120dp"
        android:tint="@color/cardview_dark_background"
        android:tintMode="multiply"
        android:layout_centerHorizontal="false"
        android:layout_centerVertical="false"/>

</RelativeLayout>